--- a/config/conky/config
+++ b/config/conky/config
@@ -16,8 +16,8 @@ conky.config = {
 
 	double_buffer          = true,
 
-	minimum_width          = 440,
-	maximum_width          = 440,
+	minimum_width          = 560,
+	maximum_width          = 560,
 
 	minimum_height         = 10,
 
@@ -33,8 +33,8 @@ conky.config = {
 	color3                 = '586E75',
 
 	alignment              = 'top_right',
-	gap_x                  = 250,
-	gap_y                  = -60,
+	gap_x                  = 20,
+	gap_y                  = 90,
 	no_buffers             = true,
 	text_buffer_size       = 2048,
 	uppercase              = false,
@@ -47,16 +47,32 @@ conky.config = {
 
 conky.text = [[
 
-${voffset -60}
+${hr}
+${font Font Awesome 5 Free:style=Regular:size=16} ${font}${font DejaVu Sans:style=bold:size=16}${time %A, %B %d}${font}
+${font Font Awesome 5 Free:style=Regular:size=16} ${font}${font DejaVu Sans:style=bold:size=16}${uid_name 1000}@${nodename}${font}
+${hr}
 
-${font Font Awesome 5 Free:style=Regular:size=13} ${font}${font DejaVu Sans:style=bold:size=13}${time %A, %B %d}${font} ${alignr} ${font Font Awesome 5 Free:style=Regular:size=13} ${font}${time %H:%M:%S}
-${font Font Awesome 5 Free:style=Regular:size=13} ${font}${font DejaVu Sans:style=bold:size=13}${uid_name 1000}@${nodename}${font} ${alignr}(${distribution})
 ${hr}
-${font Font Awesome 5 Free:style=Solid}${font} ${downspeed wlan0} ${goto 220} ${font Font Awesome 5 Free:style=Solid}${font} ${upspeed wlan0}
-${downspeedgraph wlan0 50,200 6C71C4 6C71C4} ${goto 220} ${upspeedgraph wlan0 50,200 2AA198 2AA198}
-${font Font Awesome 5 Free:style=Solid}${font} ${memperc}% ${goto 220} ${font Font Awesome 5 Free:style=Solid}${font} ${cpu 0}%
-${memgraph 50,200 268BD2 268BD2} ${goto 220} ${cpugraph 0 50,200 859900 859900}
-${font Font Awesome 5 Free:style=Solid}${font} ${alignr} ${battery_time} remaining
-${color CB4B16}${battery_bar 20,440}${color}
+${font Font Awesome 5 Free:style=Solid}${font} ${memperc}% ${goto 300} ${font Font Awesome 5 Free:style=Solid}${font} ${cpu 0}%
+${memgraph 80,260 268BD2 268BD2} ${goto 300} ${cpugraph 0 80,260 859900 859900}
+Top Processes: ${alignr} (${processes} total processes)
+Name          ${goto 160} PID          ${goto 260} CPU%         ${goto 360} MEM%         ${alignr} TIME
 ${hr}
+${top name 1} ${goto 160} ${top pid 1} ${goto 260} ${top cpu 1} ${goto 360} ${top mem 1} ${alignr} ${top time 1}
+${top name 2} ${goto 160} ${top pid 2} ${goto 260} ${top cpu 2} ${goto 360} ${top mem 2} ${alignr} ${top time 2}
+${top name 3} ${goto 160} ${top pid 3} ${goto 260} ${top cpu 3} ${goto 360} ${top mem 3} ${alignr} ${top time 3}
+${top name 4} ${goto 160} ${top pid 4} ${goto 260} ${top cpu 4} ${goto 360} ${top mem 4} ${alignr} ${top time 4}
+${top name 5} ${goto 160} ${top pid 5} ${goto 260} ${top cpu 5} ${goto 360} ${top mem 5} ${alignr} ${top time 5}
+${hr}
+
+${hr}
+${font Font Awesome 5 Free:style=Solid}${font} ${downspeed wlan0} ${goto 300} ${font Font Awesome 5 Free:style=Solid}${font} ${upspeed wlan0}
+${downspeedgraph wlan0 80,260 6C71C4 6C71C4} ${goto 300} ${upspeedgraph wlan0 80,260 2AA198 2AA198}
+${font Font Awesome 5 Free:style=Solid} ${font}${wireless_essid} ${alignr}${font Font Awesome 5 Free:style=Solid} ${font}${addr wlan0}
+${hr}
+
+${goto 50}${font Font Awesome 5 Free:style=Solid}${font} ${alignc} ${battery_time} remaining
+${goto 50}${color CB4B16}${battery_bar 20,460}${color}
+${hr}
+
 ]]
