--- a/config/conky/config
+++ b/config/conky/config
@@ -19,7 +19,7 @@ conky.config = {
 	minimum_width          = 440,
 	maximum_width          = 440,
 
-	minimum_height         = 10,
+	minimum_height         = 1000,
 
 	draw_shades            = false,
 	draw_outline           = false,
@@ -35,7 +35,7 @@ conky.config = {
 
 	alignment              = 'top_right',
 	gap_x                  = 20,
-	gap_y                  = 85,
+	gap_y                  = 80,
 	no_buffers             = true,
 	text_buffer_size       = 2048,
 	uppercase              = false,
@@ -43,14 +43,18 @@ conky.config = {
 	net_avg_samples        = 2,
 	override_utf8_locale   = true,
 
-	font                   = 'DejaVu Sans:style=medium:size=10'
+	font                   = 'DejaVu Sans:style=medium:size=10',
+
+    lua_load = "~/.config/conky/clock.lua",
+    lua_draw_hook_pre = "clock_rings",
+    lua_draw_hook_post = "main"
 }
 
 conky.text = [[
-${voffset -24}
 ${color0}${hr}$color
 ${font Font Awesome 5 Free:style=Regular:size=16}${font}${goto 36}${voffset -6}${font DejaVu Sans:style=bold:size=16}${time %A, %B %d}${font}
 ${voffset 4}${font Font Awesome 5 Free:style=Regular:size=16} ${font}${goto 36}${voffset -7}${font DejaVu Sans:style=bold:size=16}${uid_name 1000}@${nodename}${font}
+${voffset 300}
 ${color0}${hr}$color
 ${font Font Awesome 5 Free:style=Solid}${font} ${memperc}% ${goto 230} ${font Font Awesome 5 Free:style=Solid}${font} ${cpu 0}%
 ${memgraph 60,210 BF616A BF616A} ${goto 230} ${cpugraph 0 60,210 D08770 D08770}
