--- a/i3/config
+++ b/i3/config
@@ -86,6 +86,11 @@ bindsym $mod+Pause exec --no-startup-id ~/.config/i3/scripts/betterlockscreen -l
 # Calculator
 bindsym $mod+g exec --no-startup-id gnome-calculator
 
+# Volume controls
+bindsym XF86AudioRaiseVolume exec --no-startup-id pactl -- set-sink-volume 1 +5% 
+bindsym XF86AudioLowerVolume exec --no-startup-id pactl -- set-sink-volume 1 -5%
+bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute 1 toggle
+
 # Screenshot of entire desktop
 bindsym $mod+F4 exec --no-startup-id scrot -e 'feh $f -x' -d 2
 # Screenshot of focused window
