Added file opener powered by fzf

--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -1,7 +1,9 @@
+allow_remote_control yes
+
 font_family DejaVu Mono for Powerline
 font_family DejaVu Mono Bold for Powerline
 font_family DejaVu Mono Book for Powerline
-font_size 12.0
+font_size 11.0
 
 cursor_shape beam
 
@@ -9,6 +11,9 @@ scrollback_lines 2000
 enable_audio_bell no
 visual_bell_duration 0
 
+adjust_line_height 1
+
+background_opacity 0.9
 background  #2E3440
 foreground  #D8DEE9
 color0      #3B4252
